--- a/TP1practicas/TP1practicas.csproj
+++ b/TP1practicas/TP1practicas.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Personas.cs" />
     <Compile Include="RecuperoContraseña.cs">
       <SubType>Form</SubType>
     </Compile>
