Todos los forms terminados, no queda nada por modificar, no me hagas especificar todo.

--- a/TP1practicas/TP1practicas.csproj
+++ b/TP1practicas/TP1practicas.csproj
@@ -58,11 +58,11 @@
     <Compile Include="RecuperoContraseña.Designer.cs">
       <DependentUpon>RecuperoContraseña.cs</DependentUpon>
     </Compile>
-    <Compile Include="InicioSesion.cs">
+    <Compile Include="Inicio de sesión.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="InicioSesion.Designer.cs">
-      <DependentUpon>InicioSesion.cs</DependentUpon>
+    <Compile Include="Inicio de sesión.Designer.cs">
+      <DependentUpon>Inicio de sesión.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -72,8 +72,8 @@
     <Compile Include="Registro.Designer.cs">
       <DependentUpon>Registro.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="InicioSesion.resx">
-      <DependentUpon>InicioSesion.cs</DependentUpon>
+    <EmbeddedResource Include="Inicio de sesión.resx">
+      <DependentUpon>Inicio de sesión.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
