Metodo para login, se completo el registro con su metodo, se elimino campo fecha nacimiento, se mejoro interfaces, y experiencia al usuario

--- a/TP1practicas/TP1practicas.csproj
+++ b/TP1practicas/TP1practicas.csproj
@@ -46,6 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Conexion.cs" />
+    <Compile Include="ConsultaGen.cs" />
     <Compile Include="Personas.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
