Se agrego método agregarUsuario a la clase ConsultaGen

--- a/TP1practicas/TP1practicas.csproj
+++ b/TP1practicas/TP1practicas.csproj
@@ -48,7 +48,7 @@
   <ItemGroup>
     <Compile Include="Conexion.cs" />
     <Compile Include="ConsultaGen.cs" />
-    <Compile Include="Personas.cs" />
+    <Compile Include="Usuario.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
