Se agregaron mas validaciones al form de iniciosesion, se agrando la grilla del form admin, se le dieron funcion a los botos de minimizar y cerrar, se creó el form para cliente

--- a/TP1practicas/TP1practicas.csproj
+++ b/TP1practicas/TP1practicas.csproj
@@ -112,6 +112,9 @@
     <EmbeddedResource Include="WelcomeAdmin.resx">
       <DependentUpon>WelcomeAdmin.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="WelcomeUser.resx">
+      <DependentUpon>WelcomeUser.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
